// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepItem > renders a simple item when isSimple is true 1`] = `
.c0 {
  width: 100px;
  height: 12px;
}

.c1 {
  position: relative;
  z-index: 1;
  background: none;
}

.c1:first-child {
  border-radius: 100px 0 0 100px;
}

<body>
  <div>
    <div
      class="c0 c1"
    />
  </div>
</body>
`;

exports[`StepItem > renders the completed icon when step is completed 1`] = `
.c0 {
  display: flex;
  width: 100px;
}

.c2 {
  display: flex;
}

.c4 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  transform: rotate(0deg);
}

.c6 svg {
  color: #ffffff!important;
}

.c7 {
  font-family: CircularXX;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25;
  text-align: left;
  color: #292924;
}

.c1 {
  position: relative;
  z-index: 1;
  top: 9px;
  left: -10px;
}

.c1:last-child {
  width: auto;
}

.c3 {
  position: relative;
  cursor: pointer;
}

.c5 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
  position: relative;
  z-index: 1;
  background: #317a4c;
}

.c8 {
  margin-top: 2px;
  font-weight: 500;
  white-space: nowrap;
}

.c9 {
  position: absolute;
  height: 12px;
  width: 100%;
  top: 7px;
  left: 13px;
  background: #317a4c;
  z-index: 0;
}

@media (min-width: 0px) {
  .c0 {
    align-items: flex-start;
  }
}

@media (min-width: 0px) {
  .c2 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c4 {
    justify-content: center;
  }
}

@media (min-width: 0px) {
  .c4 {
    align-items: center;
  }
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3"
        data-testid="step-item-Step 1"
      >
        <div
          class="c4 c5"
        >
          <span
            class="c6"
            data-testid="tick-container"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.641 5.232a1.001 1.001 0 00-1.409.128L9.807 16.67l-5.252-3.501a1 1 0 10-1.11 1.664l6 4a1.006 1.006 0 001.324-.193l10-12a1.001 1.001 0 00-.128-1.408z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <p
          class="c7 c8"
          cursor="inherit"
          title=""
        >
          Step 1
        </p>
      </div>
      <div
        class="c9"
      />
    </div>
  </div>
</body>
`;

exports[`StepItem > renders the label correctly and does not render tick if notCompleted 1`] = `
.c0 {
  display: flex;
  width: 100px;
}

.c2 {
  display: flex;
}

.c4 {
  display: flex;
}

.c6 {
  font-family: CircularXX;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25;
  text-align: left;
  color: #292924;
}

.c1 {
  position: relative;
  z-index: 1;
  top: 9px;
  left: -10px;
}

.c1:last-child {
  width: auto;
}

.c3 {
  position: relative;
  cursor: pointer;
}

.c5 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
  position: relative;
  z-index: 1;
  background: #c9e2ce;
}

.c7 {
  margin-top: 2px;
  font-weight: 500;
  white-space: nowrap;
}

@media (min-width: 0px) {
  .c0 {
    align-items: flex-start;
  }
}

@media (min-width: 0px) {
  .c2 {
    flex-direction: column;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c4 {
    justify-content: center;
  }
}

@media (min-width: 0px) {
  .c4 {
    align-items: center;
  }
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3"
        data-testid="step-item-Step 1"
      >
        <div
          class="c4 c5"
        />
        <p
          class="c6 c7"
          cursor="inherit"
          title=""
        >
          Step 1
        </p>
      </div>
    </div>
  </div>
</body>
`;
